--- a/FaceBounce/AndroidManifest.xml
+++ b/FaceBounce/AndroidManifest.xml
@@ -9,15 +9,31 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
+        
         <activity
             android:name=".FaceBounceActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="com.conorb.test.FBMAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+                
+                
+                
             </intent-filter>
         </activity>
+        
+                <activity
+            android:name=".FBIntroActivity"
+            android:label="@string/app_name" 
+            android:theme="@android:style/Theme.NoTitleBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+                
+            </intent-filter>
+        </activity>
+        
     </application>
 
 </manifest>
