Wrong activity launched. Removed dummy activity

--- a/FaceBounce/AndroidManifest.xml
+++ b/FaceBounce/AndroidManifest.xml
@@ -10,29 +10,31 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         
-        <activity
+        
+                <activity
             android:name=".FaceBounceActivity"
             android:label="@string/app_name" 
             android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
-                <action android:name="com.conorb.test.FBMAIN" />
-                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="android.intent.action.MAIN" /> 
+             <category android:name="android.intent.category.LAUNCHER" /> 
                 
                 
                 
             </intent-filter>
         </activity>
         
-                <activity
-            android:name=".FBIntroActivity"
-            android:label="@string/app_name" 
-            android:theme="@android:style/Theme.NoTitleBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+<!--                 <activity -->
+<!--             android:name=".FBIntroActivity" -->
+<!--             android:label="@string/app_name"  -->
+<!--             android:theme="@android:style/Theme.NoTitleBar"> -->
+<!--             <intent-filter> -->
+<!--                 <action android:name="android.intent.action.MAIN" /> -->
+<!--                 <category android:name="android.intent.category.LAUNCHER" /> -->
                 
-            </intent-filter>
-        </activity>
+<!--             </intent-filter> -->
+<!--         </activity> -->
+
         
     </application>
 
